# BackEnd/ChamberAppel/ChamberAppel.Api/Controllers/DisciplineBudgetairesController.cs
@@ -22,7 +22,7 @@ namespace ChamberAppel.Api.Controllers
         #region CRUD
 
         [HttpPost("GetAllFiltredAsync")]
-        public async Task<DatatableResponse<DisciplineBudgetaire>> GetAllFiltredAsync(DatatableRequest<DtoFiltreDisciplineBudgetaire> request)
+        public async Task<DatatableResponse<DtoDisciplineBudgetaire>> GetAllFiltredAsync(DatatableRequest<DtoFiltreDisciplineBudgetaire> request)
         {
             return await _service.GetAllAsync(request.Filtre, request.Pagination);
         }
