# FrontEnd/ChamberAppel/src/app/apis/swagger.json
@@ -276,17 +276,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/DisciplineBudgetaireDatatableResponse"
+                  "$ref": "#/components/schemas/DtoDisciplineBudgetaireDatatableResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DisciplineBudgetaireDatatableResponse"
+                  "$ref": "#/components/schemas/DtoDisciplineBudgetaireDatatableResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DisciplineBudgetaireDatatableResponse"
+                  "$ref": "#/components/schemas/DtoDisciplineBudgetaireDatatableResponse"
                 }
               }
             }
@@ -709,6 +709,18 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/DisciplineBudgetairesImport/Exporter": {
+      "post": {
+        "tags": [
+          "DisciplineBudgetairesImport"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -2308,27 +2320,6 @@
         },
         "additionalProperties": false
       },
-      "DisciplineBudgetaireDatatableResponse": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/DisciplineBudgetaire"
-            },
-            "nullable": true
-          },
-          "recordTotal": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "recordFiltred": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
       "DisciplineBudgetaireTemp": {
         "type": "object",
         "properties": {
@@ -2608,6 +2599,249 @@
               "format": "uuid"
             },
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DtoDisciplineBudgetaire": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "numero_Dossier": {
+            "type": "string",
+            "nullable": true
+          },
+          "appelant": {
+            "type": "string",
+            "nullable": true
+          },
+          "numero_Jugement_Faisant_Objet_De_Appel": {
+            "type": "string",
+            "nullable": true
+          },
+          "emis_En_Date_Du": {
+            "type": "string",
+            "nullable": true
+          },
+          "crc": {
+            "type": "string",
+            "nullable": true
+          },
+          "centre_Comptable": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Enregistrement_Requete_Cour_Regionale_Des_Comptes": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Requisition_Ministere_Public": {
+            "type": "string",
+            "nullable": true
+          },
+          "numero_Requisition_Ministere_Public": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Ordonnance_Designation_Conseiller_Rapporteur": {
+            "type": "string",
+            "nullable": true
+          },
+          "numero_Ordonnance_Designation_Conseiller_Rapporteur": {
+            "type": "string",
+            "nullable": true
+          },
+          "conseiller_Rapporteur": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Ordonnance_Designation_Conseiller_Rapporteur_Remplacant": {
+            "type": "string",
+            "nullable": true
+          },
+          "numero_Ordonnance_Designation_Conseiller_Rapporteur_Remplacant": {
+            "type": "string",
+            "nullable": true
+          },
+          "conseiller_Rapporteur_Remplacant": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Envoi_Requete_Parties": {
+            "type": "string",
+            "nullable": true
+          },
+          "parties_Agent_du_Roi_au_CRC": {
+            "type": "string",
+            "nullable": true
+          },
+          "parties_Entrepot_Regional": {
+            "type": "string",
+            "nullable": true
+          },
+          "parties_Travailleur_du_territoire": {
+            "type": "string",
+            "nullable": true
+          },
+          "parties_President_de_la_Commune": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_de_reception_par_les_parties_Agent_du_Roi_au_CRC": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_de_reception_par_les_parties_Entrepot_Regional": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_de_reception_par_les_parties_Travailleur_du_territoire": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_de_reception_par_les_parties_President_de_la_Commune": {
+            "type": "string",
+            "nullable": true
+          },
+          "reponse_au_memoire_d_appel_Agent_du_Roi_au_CRC": {
+            "type": "string",
+            "nullable": true
+          },
+          "reponse_au_memoire_d_appel_Entrepot_Regional": {
+            "type": "string",
+            "nullable": true
+          },
+          "reponse_au_memoire_d_appel_Travailleur_du_territoire": {
+            "type": "string",
+            "nullable": true
+          },
+          "reponse_au_memoire_d_appel_President_de_la_Commune": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Demande_Documents_Supplementaires": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Convocation_Interesse_Audience": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Enquete_Sur_Le_Terrain": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Preparation_Rapport": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Transmission_Dossier_Ministere_Public": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Conclusions_Ministere_Public": {
+            "type": "string",
+            "nullable": true
+          },
+          "numero_Conclusions_Ministere_Public": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Reception_Convocation_Interesse_Consultation": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Reception_Convocation_Avocat_Consultation": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Consultation_Interesse": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Consultation_Avocat": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Retour_Dossier_Greffe_Central": {
+            "type": "string",
+            "nullable": true
+          },
+          "convocation_Interesse_Audience_Jugement": {
+            "type": "string",
+            "nullable": true
+          },
+          "convocation_Avocat_Audience_Jugement": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Audience_Jugement": {
+            "type": "string",
+            "nullable": true
+          },
+          "convocation_Avocat_Prononce_Jugement": {
+            "type": "string",
+            "nullable": true
+          },
+          "convocation_Interesse_Prononce_Jugement": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Audience_Prononce_Jugement": {
+            "type": "string",
+            "nullable": true
+          },
+          "dispositif_Decision": {
+            "type": "string",
+            "nullable": true
+          },
+          "numero_Decision": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Envoi_Decision_Notification_Parties": {
+            "type": "string",
+            "nullable": true
+          },
+          "date_Reception_Comptable_Copie_Decision": {
+            "type": "string",
+            "nullable": true
+          },
+          "updatedBy": {
+            "type": "string",
+            "nullable": true
+          },
+          "updateTime": {
+            "type": "string",
+            "nullable": true
+          },
+          "isActive": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "DtoDisciplineBudgetaireDatatableResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DtoDisciplineBudgetaire"
+            },
+            "nullable": true
+          },
+          "recordTotal": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "recordFiltred": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
